[project]
name = "map-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.2",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.41.1",
    "matplotlib>=3.10.0",
]
